# RescueBox

./: .gitignore  COPYRIGHT.txt  LICENSE  NOTICE  README.md  README_EXE.txt  flaskml_migration_steps.md  pyproject.toml  rescuebox.spec  test_conversation - Sheet1.csv
RescueBox-Desktop/: README.md  (+2 more)
src/deepfake-detection/: README.md  pyproject.toml
src/deepfake-detection/LICENSES/: LICENSE_WebOb  LICENSE_nvidia-cublas-cu11.txt  LICENSE_nvidia-cuda-nvrtc-cu11.txt  LICENSE_nvidia-cuda-runtime-cu11.txt  LICENSE_nvidia-cudnn-cu11.txt  LICENSE_nvidia-dali-cuda110.txt  LICENSE_pbkdf2.txt  LICENSE_repoze.sendmail
src/deepfake-detection/deepfake_detection/: cli.py  generate_prompt_dataset.py  img-app-info.md  main.py  prompts.txt  requirements.txt  sim_data.py
src/deepfake-detection/deepfake_detection/dataset_prep/: generate_prompt_dataset.py  prepare_data_dfeval.py  prepare_data_twinsynths.py
src/deepfake-detection/deepfake_detection/dimatransformer/: config.json
src/deepfake-detection/deepfake_detection/process/: bnext_M.py  bnext_S.py  facedetector.py  resnet50.py  transformer.py  transformerDima_onnx_process.py  utils.py
src/deepfake-detection/tests/: test_server.py
src/face-detection-recognition/: README.md  benchmark_testing_CPU_RAM.md  faster_finding.md  pyproject.toml
src/face-detection-recognition/benchmark_testing/: benchmark.sh  calc_data_metrics_benchmark.py  construct_paths.py  edgecase_testing.py  run_face_find_bulk_benchmark.py  run_face_find_time.sh  run_face_find_time_random.sh  system_monitor.sh  system_monitor_30.sh  test_data_setup.py
src/face-detection-recognition/best_results/: retinaface_ArcFace_0.5_results.txt  retinaface_Facenet512_0.66_results.txt  yolov8_ArcFace_0.48_results.txt  yolov8_Facenet512_0.64_results.txt
src/face-detection-recognition/face_detection_recognition/: app-info.md  database_functions.py  face_match_server.py  face_match_server_multiprocessing.py  face_match_server_multithread.py  face_match_server_multithread_dynamic_worker.py  face_representation.py  hash.py  interface.py
src/face-detection-recognition/face_detection_recognition/config/: db_config.json  model_config.json
src/face-detection-recognition/face_detection_recognition/utils/: GPU.py  embedding_utils.py  get_batch_embeddings.py  get_embeddings.py  img_preprocessing.py  logger.py  preprocessing.py  resource_path.py  retinaface_utils.py  yolo_utils.py
src/face-detection-recognition/test/: detection_testing.py  ensemble_voting_test.py  retinaface_test.py  test_app_main.py
src/image-summary/: pyproject.toml
src/image-summary/image_summary/: app-info.md  main.py  model.py  process.py
src/image-summary/test_input/: lake_snow_forest.tiff
src/image-summary/tests/: test_main_image_summary.py
src/message-analyser/: README.md  pyproject.toml  requirements.txt  results.csv
src/message-analyser/message_analyser/: InputsHandler.py  OutputParser.py  main.py  server_info.md
src/message-analyser/message_analyser/data/: error_log.txt  predicted_result.csv  predicted_result_gemma_2b.csv
src/message-analyser/message_analyser/data/processed/: combined_conversations.csv
src/message-analyser/message_analyser/questions/: investigative_questions.csv  preset_questions.json
src/message-analyser/message_analyser/results/: error_log.txt  predicted_result.csv  raw_analysis.csv
src/message-analyser/message_analyser/scripts/: export_to_onnx.py  extract_questions.py  preprocessing.py  run_mistral_inference.py  run_onnx_inference.py
src/message-analyser/message_analyser/test/: test_onnx_model.py
src/message-analyser/results/: mocked_output.csv  predicted_result.csv
src/message-analyser/test/: model_test.py
src/message-analyser/tests/: multiple_conversations.csv  single_conversation.csv  test_conversations.csv  test_main.py  test_main_message_analyser.py
src/ufdr-mounter/: pyproject.toml
src/ufdr-mounter/tests/: test_main_ufdr_mounter.py
src/ufdr-mounter/ufdr_mounter/: requirements.txt  ufdr-app-info.md  ufdr_server.py
src/ufdr-mounter/ufdr_mounter/utils/: __init__.py  ufdr_mount_unix.py  ufdr_mount_windows.py
(+68 files in other folders)
